--- a/index.html
+++ b/index.html
@@ -8,25 +8,18 @@
     <title>Document</title>
   </head>
   <body>
-    <form class="form-contairn" method="get" action="#">
-      <!-- <img src="img/fondo.jpg" alt=""> -->
-      <p class="title-principal">SIGN IN</p>
-
-      <div class="form-informacion">
-        <p class="form-username">USERNAME</p>
-        <input type="text" name="name" id="name" />
-        <p class="form-password">PASSWORD</p>
-        <input type="password" name="password" id="password" />
-      </div>
-
-      <input type="radio" name="hm" id="keep" />Keep me signed ind
-
-      <div class="form-button">
-        <button class="form-sign-in"> SIGN IN </button>
-      </div>
-      
-      <hr class="form-linea-principal" />
-      <p class="form-forget">Forget Passwor?</p>
-    </form>
+    <section class="form-contairn">
+      <p class="form-title">Formulario de registro</p>
+      <input class="form-input nombre" type="text" name="" id="" />
+      <input class="form-input apellido" type="text" name="" id="" />
+      <input class="form-input email" type="email" name="" id="" />
+      <input class="form-input password" type="password" name="" id="" />
+      <p class="form-terminos">
+        Estoy deacuerdo con los
+        <a class="form-link" href="#">Terminos y Derechos </a>
+      </p>
+      <button class="form-button">Registrar</button>
+      <p class="form-iniciarSeccion">Ya tienes una cuenta?</p>
+    </section>
   </body>
 </html>
